# Walkability

./: .gitignore  CLAUDE.md  Dockerfile  README.md  deploy-hf.sh  pyproject.toml  requirements.txt
.claude/: launch.json
.github/scripts/: keep_awake.mjs
.github/workflows/: keep-awake.yml
.streamlit/: config.toml
Research/: break_research_2026-06-17.md  enriched_graph_exploration.txt  env_rework_spec.md  reanchor_spec.md  session_decisions.md  walkability_day2_summary.docx  walkability_day3_summary.docx  walkability_day4_summary.docx  work_and_verification_outline.md
app/: Footpath Atlas.html  streamlit_app.py
app/components/maplibre_map/frontend/: index.html  main.js
notebooks/: build_problem_route_maps.py  calibration_survey.py  calibration_targets.README.md  calibration_targets.csv  date_anomalies.py  diagnostics.py  explore_enriched_graph.py  explore_graph.py  ground_truth.README.md  ground_truth.csv  problem_routes.py  problem_routes_baseline.json  region_maps.py  run_route_survey.py  sidewalks_visualization.py  sparse_eyes_routes.py  sparse_eyes_targets.README.md  sparse_eyes_targets.csv  test_route.py  verify_system.py
walkability/: config.py
walkability/graph/: build.py  compact.py  download.py  download_environment.py  environment.py
walkability/osm/: fallback.py  tag_resolver.py
walkability/routing/: __init__.py  clip.py  cost.py  router.py
walkability/scoring/: factors.py  weights.py
